# mymod2

./: CMakeLists.txt  customize.sh  module.prop
.github/workflows/: build.yml
src/: mymod.cpp  zygisk.hpp
